--- a/public/403.html
+++ b/public/403.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>We're sorry, but something went wrong (500)</title>
+  <title>Acesso Negado</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   body {
@@ -61,7 +61,9 @@
     <div>
       <h1>Acesso Negado.</h1>
     </div>
-    <p>Você não tem permissão para visualizar esta página.</p>
+    <p>Você não tem permissão para visualizar esta página. <br>
+      <a href="/">Início</a></p>
+
   </div>
 </body>
 </html>
