--- a/public/403.html
+++ b/public/403.html
@@ -62,7 +62,7 @@
       <h1>Acesso Negado.</h1>
     </div>
     <p>Você não tem permissão para visualizar esta página. <br>
-      <a href="/">Início</a></p>
+      <a href="/" target="_self">Início</a></p>
 
   </div>
 </body>
